Pantalla winner finalizada y solucionados problemas

--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
     </div>
     </section>
 <!-- Cuarta Pantalla (Winner) --<<<<<    -->
-    <section class="sreeen" id="pantalla4" style="display:none" onclick="reinicio()">
-        <div class="champion"></div>
-        <div class="contenedor4" id="winner"></div>
+    <section class="pantallas" id="pantalla4" style="display:none" onclick="reinicio()">
+        <div class="contenedor4">
+            <div class="champion">¡WE HAVE A WINNER!</div>
+            <div class="bandera"></div>
+            <div class="win" id="winner"></div>
+        </div>
     </section>
     
     
