Arreglando Github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- Primera Pantalla --<<<<< -->
     <section class="pantallas" id="pantalla1" onclick="cambioPantalla(2)">
-        <div class="contenedor1"><img src="/img/boatgif.gif" alt="Funny image">
+        <div class="contenedor1"><img src="img/boatgif.gif" alt="Funny image">
             <div class="credit"><strong>Click to play</strong></div>
         </div>
     </section>
@@ -18,11 +18,11 @@
     <section class="pantallas" id="pantalla2" style="display:none">
         <div class="contenedorBoats" id="contenedor">
             <div class="contenedorBoats1" id="contenedorBoats">
-                <div class="boatRed" id="1"><img src="/img/RED FLAG.png" alt="Funny image" onclick="eleccion1(1)"></div>
+                <div class="boatRed" id="1"><img src="img/RED FLAG.png" alt="Funny image" onclick="eleccion1(1)"></div>
                 <div class="textoBoatRed" id="texto"><strong>RED FLAG</strong></div>
             </div>
             <div class="contenedorBoats2" id="contenedorBoats">
-                <div class="boatBlue" id="2"><img src="/img/BLUE PEARL.png" alt="Funny image" onclick="eleccion1(2)"></div>
+                <div class="boatBlue" id="2"><img src="img/BLUE PEARL.png" alt="Funny image" onclick="eleccion1(2)"></div>
                 <div class="textoBoatBlue" id="texto"><strong>BLUE PEARL</strong></div>
             </div>
         </div>
